[package]
name = "palmier-project"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
palmier-model = { path = "../palmier-model" }
serde.workspace = true
serde_json.workspace = true
# Used for unique temp-dir names during atomic whole-directory save (the
# write-to-sibling-temp-then-atomic-rename swap), and as the `ProjectEntry::id`
# type (E2-S11).
uuid.workspace = true
# `ProjectEntry` created/last-opened timestamps (E2-S11). The registry uses the
# default-JSONEncoder numeric reference-date encoding like the reference, applied
# via a local `#[serde(with = ...)]` codec over `time::OffsetDateTime`.
time.workspace = true
# Platform registry dir (E2-S11): `%APPDATA%\PalmierProWin\` / `~/.config/palmier-pro/`.
dirs.workspace = true
# Recycle Bin / XDG trash for `ProjectRegistry::delete` (E2-S11). Optional +
# feature-gated so unit tests never move anything to the real OS trash.
trash = { workspace = true, optional = true }
# Convex HTTP transport for the sample catalog/resolve/download (E1-S8). Blocking
# client keeps `palmier-project` runtime-agnostic (no async runtime dep), mirroring
# `palmier-auth`'s `HttpConvexBackend`. rustls so no system OpenSSL is required.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }

[features]
# `system-trash` performs a real Recycle-Bin / XDG-trash move on `delete`. It is
# ON by default for the shipping crate; tests exercise `delete` through an
# injectable trasher so they never touch the OS trash regardless of this feature.
default = ["system-trash"]
system-trash = ["dep:trash"]
