[package]
name = "palmier-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
palmier-model = { path = "../palmier-model" }

# Heavy deps (candle/ort for SigLIP2/CLIP, tokenizers) come per-story — FOUNDATION §2 / §6.10.
