[package]
name = "palmier-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
palmier-model = { path = "../palmier-model" }

# E11-S3 — FrameSampler reuses Epic 4's FFmpeg seek+decode+scale path (no second
# decode path): `palmier_media::extract_frame_timed` returns one decoded RGB frame
# + its actual PTS per candidate time. `image` (`RgbImage`) is the frame pixel
# type that crosses the crate boundary; it is already a palmier-media dep.
palmier-media = { path = "../palmier-media" }
# Frame pixel type + the 8×8 luma downsample for shot detection (replaces CGImage /
# CGContext). E11-S1 also uses it for the SigLIP squash-resize preprocessing; `jpeg`
# + `png` enable `image::open` for still-image embedding (`pixel_values_from_path`).
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# E11-S2 — `.embed` (PALMEMB1) binary store + cache-key identity (EmbeddingStore).
# Ported byte-exact from Spike S-3 (`spikes/s3-siglip2/src/store.rs`), itself proven
# against the macOS `EmbeddingStore.swift`. Kept minimal: no model/runtime here — the
# embedder (ort/candle) lands per a later story (S-3 ruling: runtime = ort + ONNX).
serde.workspace = true
serde_json.workspace = true
# IEEE-754 binary16 — bit-identical to Swift's `Float16`; on-disk vector storage.
half = "2"
# SHA256 for the file-identity cache key `SHA256(path|mtime|size)[:32]`.
sha2 = "0.10"
# Platform cache dir — `%APPDATA%\PalmierProWin\Cache\embeddings\` on Windows /
# `~/.config/palmier-pro/Cache/embeddings/` on Linux. Same `dirs` convention the
# rest of the workspace uses (palmier-project registry/samples).
dirs.workspace = true
# Error context for the store read/write/decode paths.
anyhow = "1"

# E11-S1 — SigLIP2 text tokenizer (ported from Spike S-3). The HuggingFace
# `tokenizers` crate loads the SAME `tokenizer.json` the reference's `AutoTokenizer`
# reads (Gemma SentencePiece) → token-id parity by construction. Default-features off
# + `onig` keeps the build lean; no model/runtime pulled into the default build.
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# E11-S1 — the real SigLIP2 ONNX encode path is FEATURE-GATED behind `ort` so the
# DEFAULT build needs NO `onnxruntime.dll` and does not link the ONNX Runtime libs.
# Under `--features ort` the encoder uses ONNX Runtime 2.x with DirectML (Windows GPU,
# DX12 — this AMD box) + automatic CPU fallback. `load-dynamic` loads onnxruntime.dll
# at runtime (ORT_DYLIB_PATH) to avoid static-link pain on Windows; the DLL ships next
# to the .exe like the FFmpeg DLLs (E11-S6 packages it). `ndarray` bridges the
# Array<->Value tensors. Pinned to the rc the S-3 spike type-checked against.
ort = { version = "=2.0.0-rc.10", optional = true, default-features = false, features = [
    "ndarray",
    "directml",
    "load-dynamic",
] }
ndarray = { version = "0.16", optional = true }

[features]
# Default = the parity-logic core ONLY (preprocess / tokenize / L2-normalize /
# manifest / model-loader state machine). No ONNX Runtime, no weights, no DLL — what
# `cargo test` exercises. `ort` adds the live SigLIP2 encode (`VisualEmbedder`).
default = []
ort = ["dep:ort", "dep:ndarray"]

[dev-dependencies]
tempfile = "3"
