[package]
name = "palmier-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
default-run = "palmier-tauri"

[[bin]]
name = "palmier-tauri"
path = "src/main.rs"

[build-dependencies]
# E1-S1: real Tauri 2 runtime. tauri-build generates the context + embeds the
# Windows app manifest (asInvoker execution level — see build.rs + the UAC signal).
tauri-build = { version = "2", features = [] }

[features]
# E1-S10: enable the real `tauri-plugin-updater` network check. OFF by default — the
# plugin needs a baked Ed25519 pubkey in tauri.conf.json, which dev/CI builds lack; with
# the feature off the updater glue resolves to the silent-disable path (Sparkle parity).
# A release build that ships a signed feed turns this on.
updater-plugin = ["dep:tauri-plugin-updater"]

[dependencies]
# E1-S1: the real Tauri 2 runtime + the boot-sequence support crates.
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
# E1-S4: per-window size/position persistence (replaces the reference frame-autosave).
tauri-plugin-window-state = "2"
# E1-S10: real updater plugin, only compiled with the `updater-plugin` feature.
tauri-plugin-updater = { version = "2", optional = true }
# Settings/log dir resolution (%APPDATA%\PalmierProWin / ~/.config/palmier-pro).
dirs = "5"
# Boot-path tracing macros. The tracing **subscriber** is owned entirely by
# `palmier-telemetry` (E1-S3 removed the boot's own stub subscriber so the
# categorized daily-rotated file logger attaches), so we depend on `tracing` for
# the log macros only — NOT `tracing-subscriber`.
tracing = "0.1"

# Workspace crates wired into the binary (boot sequence calls into these).
palmier-model = { path = "../palmier-model" }
palmier-project = { path = "../palmier-project" }
palmier-auth = { path = "../palmier-auth" }
palmier-update = { path = "../palmier-update" }
palmier-telemetry = { path = "../palmier-telemetry" }
palmier-mcp = { path = "../palmier-mcp" }
palmier-text = { path = "../palmier-text" }
