[package]
name = "palmier-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
default-run = "palmier-tauri"

[[bin]]
name = "palmier-tauri"
path = "src/main.rs"

[build-dependencies]
# E1-S1: real Tauri 2 runtime. tauri-build generates the context + embeds the
# Windows app manifest (asInvoker execution level — see build.rs + the UAC signal).
tauri-build = { version = "2", features = [] }

[features]
# E1-S10: enable the real `tauri-plugin-updater` network check. OFF by default — the
# plugin needs a baked Ed25519 pubkey in tauri.conf.json, which dev/CI builds lack; with
# the feature off the updater glue resolves to the silent-disable path (Sparkle parity).
# A release build that ships a signed feed turns this on.
updater-plugin = ["dep:tauri-plugin-updater"]

[dependencies]
# E1-S1: the real Tauri 2 runtime + the boot-sequence support crates.
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
# E1-S4: per-window size/position persistence (replaces the reference frame-autosave).
tauri-plugin-window-state = "2"
# E1-S7: native Save-As / Open file dialogs for New/Open project (reference
# NSSavePanel/NSOpenPanel → tauri-plugin-dialog). The frontend drives the picker and
# hands the chosen `.palmier` path to `create_project`/`open_project`. Also backs the
# E4-S12 media-panel Relink picker (reference NSOpenPanel relink).
tauri-plugin-dialog = "2"
# E4-S12: media-panel OS actions. Reveal in Explorer (reference NSWorkspace
# activateFileViewerSelecting → opener `reveal_item_in_dir`) + Copy Path / clipboard
# paste (reference NSPasteboard → clipboard-manager write_text/read_text).
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
# E1-S10: real updater plugin, only compiled with the `updater-plugin` feature.
tauri-plugin-updater = { version = "2", optional = true }
# Settings/log dir resolution (%APPDATA%\PalmierProWin / ~/.config/palmier-pro).
dirs = "5"
# M2 boot integration: the agent run loop's cancellation token + the futures stream
# adapter the loop drives. `tokio` is needed to spawn the per-turn agent task onto the
# Tauri async runtime; `tokio-util` carries the `CancellationToken` the loop takes.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["rt"] }
# E5-S8: the window-handle currency for the preview present seam. Pinned to 0.6.2 — the
# EXACT version Tauri 2.11 / tao 0.35 / wry 0.55 and wgpu 27 all share (S-2 FINDINGS §3),
# so the Tauri WebviewWindow's HasWindowHandle feeds wgpu's surface unchanged (plan A1).
raw-window-handle = "=0.6.2"
# Boot-path tracing macros. The tracing **subscriber** is owned entirely by
# `palmier-telemetry` (E1-S3 removed the boot's own stub subscriber so the
# categorized daily-rotated file logger attaches), so we depend on `tracing` for
# the log macros only — NOT `tracing-subscriber`.
tracing = "0.1"

# Workspace crates wired into the binary (boot sequence calls into these).
palmier-model = { path = "../palmier-model" }
palmier-project = { path = "../palmier-project" }
palmier-auth = { path = "../palmier-auth" }
palmier-update = { path = "../palmier-update" }
palmier-telemetry = { path = "../palmier-telemetry" }
palmier-mcp = { path = "../palmier-mcp" }
palmier-text = { path = "../palmier-text" }
# M2 boot integration: the shared 30-tool dispatcher (`ToolExecutor` over one
# `EditorState`) that BOTH the MCP server and the in-app agent drive — the
# single-owner correctness property — and the in-app agent run loop / client selection.
palmier-tools = { path = "../palmier-tools" }
palmier-agent = { path = "../palmier-agent" }

# E5-S8: the wgpu compositor + decode owner for the preview present seam. The compositor
# is behind palmier-engine's `wgpu-compositor` feature (wgpu 27.0.1 + raw-window-handle
# 0.6.2 — the EXACT S-2-proven set; raw-window-handle 0.6.2 is the SAME handle currency
# Tauri 2.11 / tao 0.35 / wry 0.55 already speak, so one window backs both the wgpu
# swapchain and the WebView2 child — see spikes/s2-wry-integration/FINDINGS.md plan A1).
palmier-engine = { path = "../palmier-engine", features = ["wgpu-compositor"] }
palmier-media = { path = "../palmier-media" }
