[package]
name = "palmier-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
palmier-model = { path = "../palmier-model" }

# Heavy deps (cosmic-text, fontdb) come per-story — see FOUNDATION §2 / §6.6.
