[package]
name = "palmier-transcribe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
palmier-model = { path = "../palmier-model" }
# E10-S1: serde derives on the result model (the JSON disk cache in E10-S4 consumes them).
serde.workspace = true
# E10-S3: OS locale for "best supported locale" auto-detect (replaces Apple
# `Locale.preferredLanguages` / `Locale.current`). Small, no transitive heavy deps.
sys-locale = "0.3"

# Heavy deps (whisper-rs, tokenizers) come per-story — see FOUNDATION §2 / §6.9.

[dev-dependencies]
# Round-trips the result model in unit tests; the real disk cache (E10-S4) will
# promote this to a runtime dep.
serde_json.workspace = true
