[package]
name = "palmier-update"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# E1-S10: the crate owns the gate + config + serializable event/result types only
# (no Tauri runtime — keeps this UAC-sensitive crate's test binary light; the actual
# `tauri-plugin-updater` plugin call lives in `palmier-tauri`). See FOUNDATION §2 / §8.4.
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
